Make title text stretch out better and face the correct standard way for spines (top down instead of down up like before).

--- a/style.css
+++ b/style.css
@@ -137,11 +137,8 @@ h1 {
 }
 
 .title {
-    transform: rotate(7deg);
-    -ms-transform: rotate(270deg);
-    -moz-transform: rotate(270deg);
-    -webkit-transform: rotate(270deg);
-    -o-transform: rotate(270deg);
+    writing-mode: vertical-rl;
+    margin-bottom: 12px;
     font-size: large;
     font-weight: bolder;
     text-align: center;
